--- a/Chrome/LiveReload/manifest.json
+++ b/Chrome/LiveReload/manifest.json
@@ -19,5 +19,6 @@
   "browser_action": {
     "default_title": "Enable LiveReload",
     "default_icon": "IconDisabled.png"
-  }
+  },
+  "update_url": "http://download.livereload.com/LiveReload-Chrome-update.xml"
 }
