--- a/Chrome/LiveReload/manifest.json
+++ b/Chrome/LiveReload/manifest.json
@@ -2,6 +2,7 @@
   "name": "LiveReload",
   "version": "2.0.9",
   "background_page": "background.html",
+  "devtools_page": "devtools.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
@@ -9,6 +10,7 @@
     }
   ],
   "permissions": [
+    "experimental",
     "tabs",
     "http://*/*",
     "https://*/*",
