--- a/Chrome/LiveReload/manifest.json
+++ b/Chrome/LiveReload/manifest.json
@@ -1,13 +1,22 @@
 {
+  "manifest_version": 2,
   "name": "LiveReload",
   "version": "2.0.9",
-  "background_page": "background.html",
+  "background": {
+    "scripts": [
+      "global.js",
+      "global-chrome.js"
+    ]
+  },
   "devtools_page": "devtools.html",
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "js": ["injected.js"]
     }
+  ],
+  "web_accessible_resources": [
+    "livereload.js"
   ],
   "permissions": [
     "tabs",
