Use <all_urls> in Chrome manifest

--- a/Chrome/LiveReload/manifest.json
+++ b/Chrome/LiveReload/manifest.json
@@ -19,9 +19,7 @@
   ],
   "permissions": [
     "tabs",
-    "http://*/*",
-    "https://*/*",
-    "file://*/*"
+    "<all_urls>"
   ],
   "icons": { "48": "icon48.png",
             "128": "icon128.png" },
