--- a/Chrome/LiveReload/manifest.json
+++ b/Chrome/LiveReload/manifest.json
@@ -25,7 +25,9 @@
             "128": "icon128.png" },
   "browser_action": {
     "default_title": "Enable LiveReload",
-    "default_icon": "IconDisabled.png"
+    "default_icon": {
+      "19": "IconDisabled.png",
+      "38": "IconDisabled@2x.png" },
   },
   "update_url": "http://download.livereload.com/LiveReload-Chrome-update.xml"
 }
