--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "livereload-extensions",
   "description": "LiveReload browser extensions (not meant to be installed; npm is used for dependencies only)",
   "version": "2.0.8",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git://github.com/livereload/livereload-extensions.git"
