--- a/package.json
+++ b/package.json
@@ -2,18 +2,18 @@
   "author": "Andrey Tarantsov <andrey@tarantsov.com>",
   "name": "livereload-extensions",
   "description": "LiveReload browser extensions (not meant to be installed; npm is used for dependencies only)",
-  "version": "2.0.8",
+  "version": "2.0.9",
   "private": true,
   "repository": {
     "type": "git",
     "url": "git://github.com/livereload/livereload-extensions.git"
   },
-  "dependencies": {
-    "livereload-client": "=0.1.1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "browserify": "^8.0.3",
-    "coffeeify": "^1.0.0"
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^3.3.0",
+    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-compress": "^0.13.0"
   },
   "optionalDependencies": {},
   "engines": {
