--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "livereload-js": "^2.2.1"
   },
   "devDependencies": {
+    "coffeeify": "^1.0.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.3.0",
     "grunt-contrib-coffee": "^0.12.0",
