--- a/Chrome/LiveReload/manifest.json
+++ b/Chrome/LiveReload/manifest.json
@@ -4,7 +4,7 @@
   "version": "2.0.9",
   "background": {
     "scripts": [
-      "global.js",
+      "global.js"
     ]
   },
   "content_scripts": [
