Add styled Chrome options page with settings for https, hostname and port.

--- a/Chrome/LiveReload/manifest.json
+++ b/Chrome/LiveReload/manifest.json
@@ -16,9 +16,11 @@
   "web_accessible_resources": [
     "livereload.js"
   ],
+  "options_page": "options.html",
   "permissions": [
     "tabs",
-    "<all_urls>"
+    "<all_urls>",
+    "storage"
   ],
   "icons": { "48": "icon48.png",
             "128": "icon128.png" },
