--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules
 LiveReload.safariextension/*.js
 Chrome/LiveReload/*.js
-Firefox/content/*.js
+Firefox/LiveReload/*.js
 lib/*.js
 lib/*/*.js
 /dist
